<resources>
    <string name="app_name">DDTools</string>
    <string name="title_home">首页</string>
    <string name="title_tools">工具</string>
    <string name="title_setting">设置</string>
    <string name="produce_info">produce by fmq</string>
    <string name="about">关于</string>
    <string name="info">信息</string>
    <string name="todo">TODO</string>
    <string name="home_list_title_default">这是标题标题标题标题标题\n这也是标题标题标题标题</string>
    <string name="home_list_name">蒙古上单蒙古上单</string>
    <string name="list_fan_num">114514粉丝</string>
    <string name="ingredient">成分查询</string>
    <string name="dynamic">动态浏览</string>
    <string name="tablet">写字板</string>
    <string name="text_tablet">\t\t关注永雏塔菲喵，关注永雏塔菲谢谢喵</string>
    <string name="text_sure">确定</string>
    <string name="text_tablet_content">在这里写内容，比如：\n关注永雏塔菲喵！\n关注永雏塔菲谢谢喵！</string>
</resources>