<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_list_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_live_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_live_cover"
        app:layout_constraintStart_toStartOf="@+id/home_list_title"
        app:layout_constraintTop_toBottomOf="@+id/home_list_title"
        app:roundPercent="1" />

    <TextView
        android:id="@+id/home_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/home_list_title_default"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/home_list_img" />

    <TextView
        android:id="@+id/home_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/home_list_name"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageFilterView"
        app:layout_constraintTop_toBottomOf="@+id/home_list_title" />


    <TextView
        android:id="@+id/home_list_fan_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_fan_num"
        app:layout_constraintStart_toStartOf="@+id/home_list_name"
        app:layout_constraintTop_toBottomOf="@+id/home_list_name" />

    <ImageView
        android:id="@+id/home_list_unfollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="@+id/home_list_fan_num"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>